workloads/clusters/phl-sno1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  labels:
    app: hello-nginx
spec:
  selector:
    app: hello-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
